[gd_scene load_steps=4 format=3 uid="uid://dhpqy15ydpns5"]

[ext_resource type="Texture2D" uid="uid://cq5vcv4jem3p" path="res://Sprites/∞/Book.png" id="1_ulj5a"]
[ext_resource type="Script" uid="uid://jxugnha7ucvd" path="res://book.gd" id="2_k3l80"]
[ext_resource type="FontFile" uid="uid://ba8dqphbk1c1i" path="res://Fonts/Fifaks10Dev1.ttf" id="3_vikv3"]

[node name="Node2D" type="Node2D"]

[node name="Book" type="Sprite2D" parent="."]
texture = ExtResource("1_ulj5a")
script = ExtResource("2_k3l80")

[node name="LeftPage" type="RichTextLabel" parent="Book"]
offset_left = -308.0
offset_top = -167.0
offset_right = -14.0
offset_bottom = 169.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vikv3")
theme_override_font_sizes/normal_font_size = 12
text = "ааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааа"
fit_content = true
scroll_active = false
autowrap_mode = 1

[node name="RightPage" type="RichTextLabel" parent="Book"]
offset_left = 15.0
offset_top = -167.0
offset_right = 312.0
offset_bottom = 169.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vikv3")
theme_override_font_sizes/normal_font_size = 12
text = "ааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааааа"
fit_content = true
scroll_active = false
autowrap_mode = 1

[node name="Button" type="Button" parent="Book"]
offset_left = 297.0
offset_top = -175.0
offset_right = 315.0
offset_bottom = -144.0
text = "X"

[node name="Button2" type="Button" parent="Book"]
offset_left = 294.0
offset_top = 144.0
offset_right = 312.0
offset_bottom = 175.0
text = ">"

[node name="Button3" type="Button" parent="Book"]
offset_left = -314.0
offset_top = 143.0
offset_right = -296.0
offset_bottom = 174.0
text = "<"

[node name="LeftCounter" type="RichTextLabel" parent="Book"]
clip_contents = false
offset_left = -181.0
offset_top = 157.0
offset_right = -141.0
offset_bottom = 197.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vikv3")
theme_override_font_sizes/normal_font_size = 12
text = "1"
horizontal_alignment = 1

[node name="RightCounter" type="RichTextLabel" parent="Book"]
clip_contents = false
offset_left = 144.0
offset_top = 157.0
offset_right = 184.0
offset_bottom = 197.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_vikv3")
theme_override_font_sizes/normal_font_size = 12
text = "2"
horizontal_alignment = 1

[connection signal="button_down" from="Book/Button" to="Book" method="_on_button_button_down"]
[connection signal="button_down" from="Book/Button2" to="Book" method="_on_button_2_button_down"]
[connection signal="button_down" from="Book/Button3" to="Book" method="_on_button_3_button_down"]
